# ia-powerfour

./: .gitignore  CMakeLists.txt  Colors.h  Grid.cpp  Grid.h  HumanPlayer.cpp  HumanPlayer.h  IaPLayer.cpp  IaPLayer.h  Player.cpp  Player.h  PowerFour.cpp  PowerFour.h  README.md  Utils.cpp  Utils.h  main.cpp
tests/: tests.cpp
